# seneschal-voicebot

./: .env.example  .gitignore  .ignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COREML_SETUP.md  Cargo.toml  Cross.toml  LICENSE-SENESCHAL.md  Makefile  build.rs  codemap.md  install-gitea.sh  install.sh  mac-seneschal.sh  mac-voicebot.sh  opencode.json  readme.md  secondary-agent.md  seneschal-architecture.md  seneschal-dream.sh  seneschal.dev.toml  seneschal.pro.toml  token-usage-output.txt  uninstall.sh  voicebot-dream.sh  voicebot.dev.toml  voicebot.pro.toml  voicebot.toml
.slim/: codemap.json
cross/: Dockerfile.aarch64
db-inspect/: .gitignore  Cargo.toml  README.md
db-inspect/src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
db-inspect/src/handlers/: delete_message.rs  delete_session.rs  dream_state.rs  history.rs  home.rs  memories.rs  messages.rs  mod.rs  profile.rs  search.rs  session_detail.rs  sessions.rs  system_prompts.rs
db-inspect/static/: style.css
db-inspect/templates/: base.html  delete_message.html  delete_session.html  dream_state.html  error.html  history.html  index.html  memories.html  messages.html  profile.html  search.html  session_detail.html  sessions.html  system_prompts.html
db-inspect/tests/: routes.rs
db-inspect/tests/fixtures/: fixture.sql
doc/: ANALISIS-MEJORAS-SENECHAL.md  ANALISIS-MEJORAS-VOICEBOT.md  APPLE_WATCH_CLIENT.md  ARCHITECTURE-MCP-LAYER.md  ARCHITECTURE.md  LLM-requirements.md  MAIN_PROCESS.md  PROCESS_ARCHITECTURE.md  PUBLISHING.md  TOOLS.md  (+12 more)
(+247 files in other folders)
